<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registo">

    <TextView
        android:id="@+id/txtRegisto"
        style="@style/textoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:text="@string/registo"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/edtxtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nome"
        android:ems="15"
        android:layout_below="@+id/txtRegisto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/edtxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Email"
        android:ems="15"
        android:layout_below="@+id/edtxtNome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edtxtPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Password"
        android:ems="15"
        android:layout_below="@+id/edtxtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edtxtPwdCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwordCheck"
        android:ems="15"
        android:layout_below="@+id/edtxtPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/DP01"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtxtPwdCheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/registar"/>

    <TextView
        style="@style/textoLogin"
        android:id="@+id/textView_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="@color/Secondary"
        android:clickable="true"
        android:onClick="irLogin"/>

</RelativeLayout>