<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdicionarNota"
    android:scrollbarThumbVertical="@color/Primary"
    android:scrollbars="vertical">

    <EditText
        android:id="@+id/edtxtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:inputType="text"
        android:ems="14"
        android:hint="@string/title"
        android:textAllCaps="true"
        android:textColor="@color/Primary"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtxtTitulo"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/description"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtxtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtdescription"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/border"
        android:inputType="textMultiLine|textImeMultiLine"
        android:lines="18"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAlignment="textStart"
        android:gravity="start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtxtDescription"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGuardarNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/adicionarNota"
            app:backgroundTint="@color/Secondary" />

    </LinearLayout>


</RelativeLayout>
